--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "challenge05": "node challenge05",
     "challenge06": "node challenge06",
     "challenge07": "node challenge07",
-    "challenge08": "node challenge08"
+    "challenge08": "node challenge08",
+    "challenge09": "node challenge09",
+    "challenge10": "node challenge10",
+    "challenge11": "node challenge11",
+    "challenge12": "node challenge12"
   },
   "author": "Pedro Dominguez Aguilera",
   "license": "MIT"
